🔧 fix(CarouselWithForm.module.scss): comment out padding and overflow properties 🔧 fix(_schoolCarousel.scss): comment out font-size property 🔧 fix(_basePage.scss): comment out padding and overflow properties

--- a/src/styles/components/CarouselWithForm.module.scss
+++ b/src/styles/components/CarouselWithForm.module.scss
@@ -104,7 +104,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: clamp(tokens.$padding-m, 3vw, tokens.$padding-xxxl);
+  // padding: clamp(tokens.$padding-m, 3vw, tokens.$padding-xxxl);
   position: relative;
   background: rgba(black, 0.8);
   backdrop-filter: blur(5px);
@@ -118,7 +118,7 @@
   .formContentWrapper {
     background: white;
     border-radius: tokens.$borderRadius-xl;
-    padding: clamp(tokens.$padding-m, 3vw, tokens.$padding-xxxl);
+    padding-block: clamp(tokens.$padding-m, 3vw, tokens.$padding-xxxl);
     padding-top: 4em;
     position: relative;
     width: 100%;
@@ -134,6 +134,8 @@
     display: block;
     max-height: 80vh;
     overflow-y: auto;
+    padding-inline: 2em;
+    // overflow: hidden;
   }
 
   .closeBtn {
