--- a/src/styles/layouts/_basePage.scss
+++ b/src/styles/layouts/_basePage.scss
@@ -124,7 +124,7 @@ body {
   }
 }
 
-div[class*="CarouselWithForm"] {
-  padding-inline: 2em;
-  overflow: hidden;
-}
+// div[class*="formContent"] {
+//   padding-inline: 2em;
+//   overflow: hidden;
+// }
